--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,9 @@
 <html lang="pt-br">
 <head>
   <meta charset="utf-8">
-  <title>Portfolio Angular</title>
+  <title>Caio Vieira</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
 </head>
 <body>
